@@ -16,6 +16,9 @@
  - (dtucker) [configure.ac gss-serv-krb5.c ssh-gss.h] Define GSSAPI when found
    with krb5-config, hunt down gssapi.h and friends.  Based partially on patch
    from deengert at anl.gov.  ok djm@
+ - (djm) [groupaccess.c uidswap.c] Bug #787: Size group arrays at runtime 
+   using sysconf() if available Based on patches from 
+   holger AT van-lengerich.de and openssh_bugzilla AT hockin.org
 
 20040223
  - (dtucker) [session.c] Bug #789: Only make setcred call for !privsep in the
